# Intelligent-Traffic

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MODEL_WEIGHTS.md  README.md  THIRD_PARTY_NOTICES.md  detection_processor.py  draw_utils.py  lpr_recognizer.py  main.py  plate_recognition_model.py  plate_temporal_fusion.py  pyproject.toml  requirements.txt  start.ps1  stop.ps1  traffic_map.json  traffic_map.py  traffic_map_widget.py  trained_plate_recognizer.py  vehicle_detector.py  whitelist.json  whitelist_manager.py  实时监控界面参数说明.md  系统设计方案V1.4.md  视频推流服务.md  项目关键技术难点与解决方案.md
backend/: __init__.py  app.py  config.py  device_monitor.py  model_pipelines.py  no_parking.py  preview_stream.py  road_abnormal.py  schemas.py  state.py  trained_mog.py  video_stream.py
data-store-copy/: DESIGN.md  MANIFEST.json  README.md  restore.ps1
frontend/: index.html  styles.css
scripts/: benchmark_trained_pipeline.py
tests/: test_activation_coordinator.py  test_api.py  test_asset_store.py  test_configuration_api.py  test_configuration_contracts.py  test_configuration_repository.py  test_detection_pipeline.py  test_device_monitor.py  test_draw_utils.py  test_legacy_migration.py  test_main.py  test_model_pipeline_configuration.py  test_model_pipeline_runtime.py  test_model_pipeline_service.py  test_no_parking.py  test_plate_temporal_fusion.py  test_preview_stream.py  test_road_abnormal.py  test_scene_topology_independence.py  test_stream_batch_service.py  test_system_management_frontend.py  test_traffic_map_widget.py  test_trained_plate_recognizer.py  test_video_controls.py  test_video_service.py
训练后模型/: detect_stream.py  mog_anomaly_engine.py  parking_zone.py  (+2 more)
(+33 files in other folders)
