[project]
name = "video-test"
version = "0.1.0"
description = "GPU-accelerated vehicle and Chinese license-plate recognition"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.116,<1",
    "numpy>=1.26,<3",
    "lap>=0.5.12,<0.6",
    "opencv-python>=4.10,<5",
    "pillow>=10,<13",
    "python-multipart>=0.0.20,<1",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "ultralytics==8.4.92",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<10",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
cache-dir = ".uv-cache"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
